# gsd-dashboard

./: .gitignore  .stylelintrc.json  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  index.html  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/sessions/: claude-basic.jsonl  claude-partial.jsonl  codex-basic.jsonl  codex-current.jsonl  codex-sparse.jsonl
src-tauri/permissions/autogenerated/: clear_session_index.toml  get_boot_status.toml  get_global_chart_data.toml  get_portfolio.toml  get_portfolio_heatmap.toml  get_project.toml  get_project_chart_data.toml  get_project_milestones.toml  get_project_phase_panel.toml  get_watcher_status.toml  index_sessions.toml  list_global_sessions.toml  list_project_sessions.toml  rebuild_cache.toml  scan_projects.toml
src-tauri/src/: app_state.rs  autostart.rs  bootstrap.rs  error.rs  events.rs  lib.rs  main.rs  milestone_match.rs  scan_persistence.rs  scan_refresh.rs  scan_roots.rs  scan_service.rs  scanner.rs  settings.rs  updater.rs
src-tauri/src/commands/: mod.rs  projects.rs  scan.rs  sessions.rs  settings.rs
src-tauri/tests/: autostart_settings.rs  bootstrap.rs  daily_activity_rebuild.rs  global_chart_data.rs  global_sessions_query.rs  global_sessions_unmatched.rs  live_updates_targeted_refresh.rs  live_updates_watcher.rs  parser_fixtures.rs  plan_items_index.rs  portfolio_commands.rs  portfolio_heatmap.rs  project_chart_data.rs  project_milestones.rs  project_repo.rs  project_sessions_query.rs  rebuild_cache.rs  scanner.rs  session_indexer.rs  session_repo.rs  settings_commands.rs  settings_guardrails.rs  startup_visibility.rs  state_excerpt.rs  store_migrations.rs  tray_service.rs
(+190 files in other folders)
