[package]
name = "gsd-dashboard"
version = "0.1.0"
description = "GSD Dashboard desktop app"
authors = ["smacdonald"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = "2.4.0"
deadpool-sqlite = "0.13.0"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"
