[package]
name = "gsd-dashboard"
version = "0.1.0"
description = "GSD Dashboard desktop app"
authors = ["smacdonald"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3", features = ["local-offset", "parsing"] }
tokio = { version = "1.52.1", features = ["full"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"
deadpool-sqlite = { package = "deadpool-sqlite", git = "https://github.com/deadpool-rs/deadpool.git", rev = "df37445a89e0c455a5a2d8a5575d338df9407c99" }
dirs = "6.0.0"
gray_matter = "0.3.2"
ignore = "0.4.25"
notify = "=8.2.0"
notify-debouncer-full = "0.7"
pulldown-cmark = "0.13.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2.5.3"
tiny-skia = "0.12.0"

[dev-dependencies]
tauri = { version = "2.10.3", features = ["test"] }
tempfile = "3.27.0"
